--- a/package.json
+++ b/package.json
@@ -3,26 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.38",
-    "@types/react": "^18.2.15",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/node": "^20.4.7",
+    "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6",
+    "web-vitals": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:cov": "react-scripts test --coverage --watchAll",
+    "test:cov": "jest --coverage",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "lint": "eslint ./src --ext .tsx --ext .ts --max-warnings 0"
@@ -46,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.5.3",
     "gh-pages": "^5.0.0"
   }
 }
