[csAbout] Added install script

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "test:cov": "jest --coverage",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "lint": "eslint ./src --ext .tsx --ext .ts --max-warnings 0"
+    "lint": "eslint ./src --ext .tsx --ext .ts --max-warnings 0",
+    "install": "npm i --legacy-peer-deps"
   },
   "eslintConfig": {
     "extends": [
