--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "install-linter": "npm i --save-dev eslint-plugin-jest eslint-config-problems eslint-config-intense eslint-config-prettier eslint-plugin-eslint-comments eslint-plugin-import eslint-plugin-no-secrets eslint-plugin-node eslint-plugin-prettier eslint-plugin-ramda eslint-plugin-react eslint-plugin-react-hooks eslint-plugin-simple-import-sort eslint-plugin-sonarjs eslint-plugin-unicorn prettier prettier-eslint @typescript-eslint/eslint-plugin @typescript-eslint/parser eslint eslint-config-next"
   },
   "dependencies": {
+    "babel-plugin-formatjs": "^10.5.3",
     "next": "^13.4.13",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-intl": "^6.4.4",
     "sharp": "^0.32.4"
   },
   "devDependencies": {
@@ -36,6 +38,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-problems": "^8.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-formatjs": "^4.10.3",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-no-secrets": "^0.8.9",
