--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
         ],
         "paths": {
             "@/*": ["./src/*"]
-        }
+        },
+        "types": ["jest", "node"]
     },
     "include": [
         "next-env.d.ts",
