npm update and removed workflow for github pages

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@formatjs/swc-plugin": "^1.5.3",
         "next": "^13.4.19",
+        "npm": "^10.2.5",
         "react": "18.2.0",
         "react-bootstrap": "^2.8.0",
         "react-dom": "18.2.0",
